feat: Adding installation rules to README.md, adding general font styles and colors for body

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -5,6 +5,8 @@
 body {
   min-width: 320px;
   height: 100%;
+  @include Body1();
+  @include theme($globalWhite, $mainTextColor);
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
