fix: Some colors in the palette have been changed

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -10,14 +10,14 @@ $globalWhite: #FFFFFF;
 // Text
 
 $mainTextColor: #1A1A1A;
-$subtitlesColor: #8E8F99;
+$subtitlesColor: #80818F;
 
 // Fields, Inputs and Buttons
 
 $defaultFiledColor: #C5C2C2;
 $disabledFiledColor: #EDEDED;
 $activeFieldColor: #E4E7ED;
-$hoverFiledColor: #F5F5F5;
+$hoverFiledColor: #F9FAFB;
 
 // Main buttons
 
@@ -45,7 +45,7 @@ $lightGreenTag: #87CC9E;
 $orangeTag: #996A32;
 $lightOrangeTag: #FFC784;
 $roseTag: #BC5C73;
-$lightRoseTag: #FFDDE5;
+$lightRoseTag: #FFC2D1;
 $blueTag: #2C64BE;
 $lightBlueTag: #ACCCFF;
 
