--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -5,15 +5,6 @@
  */
 
 
-@mixin font-face($font-family, $font-weight, $font-style, $file-name) {
-  @font-face {
-    font-family: $font-family;
-    src: url("../fonts/#{$file-name}.ttf") format('truetype');
-    font-weight: $font-weight;
-    font-style: $font-style;
-  }
-}
-
 @mixin fontSet($ff, $fs, $fw, $lh, $fontStyle: normal) {
   font-family: $ff;
   font-size: $fs;
@@ -23,7 +14,7 @@
 }
 
 @mixin H1 ($fw: $Regular) {
-  @include fontSet($headingsFont, $fs-h1, $fw, $lh-h1);
+  @include fontSet($mainFont, $fs-h1, $fw, $lh-h1);
 }
 
 @mixin H2 ($fw: $Regular){
