--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -58,8 +58,8 @@ $lightBlueTag: #ACCCFF;
 
 /* -- FAMILIES -- */
 
-$mainFont: 'YS', sans-serif;
-$headingsFont: 'YSD', sans-serif;
+$mainFont: 'YS';
+$headingsFont: 'YSD';
 
 
 /* -- WEIGHTS -- */
