--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,10 +1,11 @@
 @import "@styles/global";
 
 .header{
+  grid-area: header;
 
   &__container{
     @include displaySettings($justify: space-between);
-    padding: 24px 53px 20px 60px;
+    padding: 24px 33px 0 40px;
     width: 100%;
   }
 
