--- a/src/components/Layout/Menu/Menu.module.scss
+++ b/src/components/Layout/Menu/Menu.module.scss
@@ -1,8 +1,12 @@
 @import "@styles/global";
 
 .menu{
-  padding: 32px 32px 0;
-  max-width: 100%;
+  grid-area: navbar;
+
+  &__container {
+    padding: 32px 32px 0;
+    max-width: 100%;
+  }
 
   &__list{
     @include displaySettings($align: flex-start);
