feat: creation of badges

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -59,13 +59,13 @@ $warningLightColor: #FFF5DB;
 /* -- ADDITION COLORS -- */
 
 $greenTag: #267A42;
-$lightGreenTag: #87CC9E;
+$lightGreenTag: #CFEBD8;
 $orangeTag: #996A32;
-$lightOrangeTag: #FFC784;
+$lightOrangeTag: #FFE9CE;
 $roseTag: #BC5C73;
-$lightRoseTag: #FFC2D1;
+$lightRoseTag: #FFE7ED;
 $blueTag: #2C64BE;
-$lightBlueTag: #ACCCFF;
+$lightBlueTag: #DEEBFF;
 
 
 
