feat: Content area created. Some refactoring.

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -4,6 +4,7 @@
   border: none !important;
   @include Body1();
   @include displaySettings($justify: space-between);
+  color: $mainTextColor !important;
 }
 
 .telegram{
