--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -46,7 +46,8 @@ $defaultDisabledImageCheckboxColor: #80818F;
 // Backgrounds
 
 $screensBgColor: #EBF0FF;
-
+$commentCardBgColor: #EFF2F7;
+$shadowCard: #CBD5F1;
 
 /* -- SYSTEM COLORS -- */
 
@@ -64,7 +65,7 @@ $orangeTag: #996A32;
 $lightOrangeTag: #FFE9CE;
 $roseTag: #BC5C73;
 $lightRoseTag: #FFE7ED;
-$blueTag: #2C64BE;
+$blueTag: #376CC0;
 $lightBlueTag: #DEEBFF;
 
 
