--- a/src/components/UserContent/UserContent.module.scss
+++ b/src/components/UserContent/UserContent.module.scss
@@ -3,7 +3,6 @@
 .userContent{
   grid-area: common;
   background-color: $globalWhite;
-  height: 100%;
   padding: 24px;
   display: flex;
   flex-direction: column;
@@ -12,6 +11,7 @@
   border-radius: 16px;
 
   &__heading{
+    min-height: 40px;
     @include displaySettings($justify: space-between);
   }
 }
