--- a/src/components/UserContent/UserContent.module.scss
+++ b/src/components/UserContent/UserContent.module.scss
@@ -1,6 +1,6 @@
 @import "@styles/global";
 
-.userContent{
+.userContent {
   grid-area: common;
   background-color: $globalWhite;
   height: 100%;
@@ -10,8 +10,9 @@
   box-sizing: border-box;
   gap: 16px;
   border-radius: 16px;
+  box-shadow: 1px 1px 2px 0px $shadowCard;
 
-  &__heading{
+  &__heading {
     @include displaySettings($justify: space-between);
   }
 }
