feat: Content sending

--- a/src/components/LoyaltyInfo/LoyaltyInfo.module.scss
+++ b/src/components/LoyaltyInfo/LoyaltyInfo.module.scss
@@ -1,64 +1,54 @@
 @import "@styles/global";
 
-.info{
+.info {
   background-color: $hoverFiledColor;
   border-radius: 16px;
   padding: 28px 28px 0;
 
-  &__title{
+  &__title {
     @include Body1($Medium);
+  }
 
-    &_sm{
-      @include Body2($Medium);
-    }
+  &__titleSm {
+    @include Body2($Medium);
   }
 
   &__input {
     width: 100%;
-    & input {
+    input {
       background-color: $globalWhite !important;
       width: 100% !important;
-
       &:hover {
         border-color: $defaultInputBgColor !important;
       }
     }
   }
 
-  &__content{
-
-    &_sizes{
-      margin: 24px 0 20px;
-      @include displaySettings($justify: start);
-      gap: 16px;
+  &__contentSizes {
+    & div{
+      width: 120px;
     }
-
-    &_adress{
-      @include displaySettings($align: start);
-      flex-direction: column;
-      gap: 16px;
-    }
+    margin: 24px 0 20px;
+    @include displaySettings($justify: start);
+    gap: 16px;
   }
 
-  &__field{
+  &__contentAddress{
+    @include displaySettings($align: start);
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  &__field {
     width: 100%;
-
-    &_clothes{
-      width: 120px;
-    }
-
-    &_step{
-      width: 120px;
-    }
   }
 
-
-  &__addressFields{
+  &__addressFields {
     @include displaySettings();
     gap: 12px;
     flex-direction: column;
 
-    &_row{
+    &Row {
       @include displaySettings();
       gap: 16px;
     }
