--- a/src/components/LoyaltyInfo/LoyaltyInfo.module.scss
+++ b/src/components/LoyaltyInfo/LoyaltyInfo.module.scss
@@ -39,6 +39,10 @@
     gap: 16px;
   }
 
+  &__fields{
+    width: 100%;
+  }
+
   &__field {
     width: 100%;
   }
@@ -49,8 +53,9 @@
     flex-direction: column;
 
     &Row {
+      width: 100%;
       @include displaySettings();
-      gap: 16px;
+      gap: 12px;
     }
   }
 }
