--- a/src/components/UserContent/AmbassadorProfile/AmbassadorProfile.module.scss
+++ b/src/components/UserContent/AmbassadorProfile/AmbassadorProfile.module.scss
@@ -4,8 +4,7 @@
   &__name {
     @include H2($Medium);
     display: block;
-    width: 60px;
-    margin-bottom: 18px;
+    margin-bottom: 16px;
   }
 
   &__button {
@@ -16,6 +15,7 @@
   }
 
   &__data {
+    overflow: hidden;
     color: $subtitlesColor;
     padding-left: 8px;
 
@@ -35,7 +35,7 @@
 
   &__block {
     @include size(234px, 227px);
-    padding: 30px 24px 22px;
+    padding: 24px;
     border-radius: $borderRadius;
     background-color: $globalWhite;
     gap: 12px;
@@ -44,7 +44,7 @@
   }
 
   &__list {
-    margin-top: 0px;
+    margin-top: 24px;
   }
 
   &__header {
