--- a/src/components/UserContent/CommentCard/CommentCard.module.scss
+++ b/src/components/UserContent/CommentCard/CommentCard.module.scss
@@ -55,7 +55,7 @@
 
   &__block {
     @include size(234px, 283px);
-    padding: 30px 24px 22px;
+    padding: 24px;
     border-radius: $borderRadius;
     background-color: $globalWhite;
     height: auto;
@@ -64,7 +64,7 @@
   }
 
   &__header {
-    @include displaySettings(flex, start, space-between);
+    @include displaySettings(flex, center, space-between);
   }
 
 }
